fixed some layout issue on features section

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Integral+CF:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Averta+Demo+PE+Cutted+Demo:wght@400&display=swap");
@@ -14,14 +13,13 @@ body {
 ::after {
   border-width: 0;
 }
-.container{
+.container {
   width: 1440px;
   margin: auto;
-  border: 2px solid black;
   height: 5728px;
 }
 @font-face {
-  font-family: "Integral CF";  
+  font-family: "Integral CF";
   src: local("IntegralCF"),
     url("./fonts/IntegralCFRegular.ttf") format("truetype");
 }
