--- a/src/components/Amaze NFT/AmazeNFT.css
+++ b/src/components/Amaze NFT/AmazeNFT.css
@@ -13,15 +13,19 @@
   flex-direction: column;
   flex-shrink: 0;
   width: 500px;
-  align-items: center;
+  align-items: start;
   justify-content: center;
+  text-align: start;
+  margin-left: 3rem;
 }
+
 .amaze-nft-group2 {
   position: relative;
-  width: 300px;
+  width: 350px;
   height: 100%;
   flex-shrink: 0;
   display: flex;
+  margin-top: 5px;
   flex-direction: column;
   justify-content: center;
   margin-left: 1rem;
@@ -32,10 +36,10 @@
   height: 100%;
   flex-shrink: 0;
   display: flex;
+  margin-top: 5px;
   flex-direction: column;
   justify-content: center;
   margin-left: 1rem;
-
 }
 .amaze-nft-group1-text {
   color: #000;
@@ -56,8 +60,8 @@
   position: absolute;
   color: #696969;
   font-size: 14px;
-  top: 45%;
-  left: 3rem;
+  top: 43%;
+  left: 51px;
   width: 249px;
   font-family: "DM Sans", sans-serif;
   line-height: 160%;
@@ -70,4 +74,3 @@
   height: 36px;
   flex-shrink: 0;
 }
-
